// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog renders a single-action dialog 1`] = `
<Modal
  animationType="fade"
  statusBarTranslucent={true}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(51, 41, 33, 0.45)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 24,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessibilityViewIsModal={true}
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 20,
          "elevation": 8,
          "padding": 24,
          "shadowColor": "#402A1A",
          "shadowOffset": {
            "height": 8,
            "width": 0,
          },
          "shadowOpacity": 0.13,
          "shadowRadius": 22,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#333333",
            "fontFamily": "Baloo2-Bold",
            "fontSize": 22,
            "lineHeight": 30,
          }
        }
      >
        Done
      </Text>
      <Text
        style={
          {
            "color": "#6B6058",
            "fontFamily": "Nunito-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginTop": 8,
          }
        }
      >
        All set.
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 12,
            "justifyContent": "flex-end",
            "marginTop": 24,
          }
        }
      >
        <View
          accessibilityLabel="OK"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 999,
                "justifyContent": "center",
                "paddingHorizontal": 24,
              },
              {
                "minHeight": 56,
              },
              {
                "elevation": 2,
                "shadowColor": "#402A1A",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.06,
                "shadowRadius": 6,
              },
              {
                "backgroundColor": "#B54C35",
                "borderColor": "transparent",
                "borderWidth": 0,
              },
              false,
              false,
              {
                "minWidth": 96,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontFamily": "Nunito-SemiBold",
                    "fontSize": 17,
                    "lineHeight": 22,
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              OK
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Dialog renders a two-action dialog 1`] = `
<Modal
  animationType="fade"
  statusBarTranslucent={true}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(51, 41, 33, 0.45)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 24,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessibilityViewIsModal={true}
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 20,
          "elevation": 8,
          "padding": 24,
          "shadowColor": "#402A1A",
          "shadowOffset": {
            "height": 8,
            "width": 0,
          },
          "shadowOpacity": 0.13,
          "shadowRadius": 22,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#333333",
            "fontFamily": "Baloo2-Bold",
            "fontSize": 22,
            "lineHeight": 30,
          }
        }
      >
        Remove profile?
      </Text>
      <Text
        style={
          {
            "color": "#6B6058",
            "fontFamily": "Nunito-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginTop": 8,
          }
        }
      >
        This also deletes their assessment history.
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 12,
            "justifyContent": "flex-end",
            "marginTop": 24,
          }
        }
      >
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 999,
                "justifyContent": "center",
                "paddingHorizontal": 24,
              },
              {
                "minHeight": 56,
              },
              false,
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#EDE0D1",
                "borderWidth": 1,
              },
              false,
              false,
              {
                "minWidth": 96,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontFamily": "Nunito-SemiBold",
                    "fontSize": 17,
                    "lineHeight": 22,
                  },
                  {
                    "color": "#B54C35",
                  },
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel="Delete"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 999,
                "justifyContent": "center",
                "paddingHorizontal": 24,
              },
              {
                "minHeight": 56,
              },
              {
                "elevation": 2,
                "shadowColor": "#402A1A",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.06,
                "shadowRadius": 6,
              },
              {
                "backgroundColor": "#D34247",
                "borderColor": "transparent",
                "borderWidth": 0,
              },
              false,
              false,
              {
                "minWidth": 96,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontFamily": "Nunito-SemiBold",
                    "fontSize": 17,
                    "lineHeight": 22,
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Delete
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
